--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "mpvue": "^1.0.11",
+    "mpvue": "1.0.11",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -33,8 +33,8 @@
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
-    "mpvue-loader": "^1.0.13",
-    "mpvue-template-compiler": "^1.0.11",
+    "mpvue-loader": "1.0.13",
+    "mpvue-template-compiler": "1.0.11",
     "mpvue-webpack-target": "^1.0.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^2.0.0",
